maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:77: error: forward reference extends over definition of variable isFirstRun
    sumTurns = leftFollowerMode(sumTurns, isFirstRun);
                                          ^